# qdrant-admin-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  cloudbuild.yaml  cloudbuild.yml  compose.yml  main.py  pyproject.toml
src/: settings.py  status.py
src/tools/: __init__.py  greet.py  status.py
src/tools/collection/: __init__.py  client.py  create_collection.py  delete_collection.py  get_collection.py  list_collections.py  snapshots.py
src/tools/points/: __init__.py  common.py  delete_points.py  get_points.py  search_points.py  upsert_points.py
